--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="musicbox-style.css"/>
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
-    <script src="./lib/dancer.min.js"></script>
+    <script src="dancer.js"></script>
     <script src="./lib/fetch.js"></script>
     <script src="audio-player.js" defer></script>
 
@@ -40,6 +40,11 @@
     </div>
 
     <!-- TODO(you): Add the HTML necessary to complete the assignment! -->
-
+    <div id="music" class="inactive">
+      <div id="bar">
+        <input type="button" id="play">
+      </div>
+    </div>
+    <div id="background" class="inactive"></div>
   </body>
 </html>
